--- a/css/style.css
+++ b/css/style.css
@@ -304,11 +304,33 @@ p,
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  padding: 40px;
+  padding: 40px 0;
 }
-.modal-wrapper:not(:last-child) {
+.modal-wrapper:nth-child(-n + 3) {
   margin-bottom: 30px;
 }
+
+.modal-wrapper:nth-child(4) {
+  margin-bottom: 20px;
+}
+
+.modal-wrapper:last-child {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.modal-input[placeholder='Введите текст'] {
+  position: relative;
+  min-height: 120px;
+}
+
+.modal-input::placeholder {
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translate(15px, 10px);
+}
+
 .modal-wrapper {
   position: relative;
 }
@@ -318,9 +340,23 @@ p,
   display: block;
   width: 100%;
   padding-left: 42px;
+  cursor: pointer;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus,
+.modal-input:hover,
+.close:hover .modal-close,
+.close:focus .modal-close {
+  border: 1px solid var(--accent-color);
+  outline: transparent;
+  fill: var(--accent-color);
+}
+
+.modal-label > .modal-input:focus + .modal-item {
+  fill: var(--accent-color);
 }
 
 .modal-text {
@@ -336,11 +372,72 @@ p,
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-item {
+.modal-item,
+.modal-close {
   position: absolute;
   top: 0;
   left: 0;
   transform: translate(15px, 12px);
+}
+.modal-close {
+  transform: translate(0);
+  cursor: pointer;
+  border-color: rgba(0, 0, 0, 0.1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close:hover .modal-close,
+.close:focus .modal-close {
+  fill: var(--accent-color);
+}
+
+.modal-icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 2px;
+}
+
+.modal-checkbox {
+  position: relative;
+}
+
+.checkbox-label {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.checkbox-label::after {
+  position: absolute;
+  content: '';
+  left: 0;
+  top: 0;
+  transform: translate(18px, 5px);
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--primary-text-color);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-checkbox:checked ~ .checkbox-label::after {
+  border: 1px solid var(--accent-color);
+  background-image: url(/images/icon-check.svg);
+  background-size: contain;
+  background-color: var(--accent-color);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    backgroung-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-wrapper + .button {
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  cursor: pointer;
+  box-shadow: 0px 3px 1px rgb(0 0 0 / 10%), 0px 1px 2px rgb(0 0 0 / 8%),
+    0px 2px 2px rgb(0 0 0 / 12%);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close {
@@ -349,8 +446,7 @@ p,
   right: 0;
   width: 30px;
   height: 30px;
-  background-image: url(../images/close.svg);
-  background-position: top right;
+
   background-color: var(--primary-backround-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: none;
@@ -392,7 +488,8 @@ p,
   margin-bottom: 10px;
   text-transform: uppercase;
 }
-.description-text {
+.description-text,
+.modal-policy {
   font-size: 14px;
   margin: 0;
   padding: 0;
@@ -568,7 +665,8 @@ p,
 
 .description-text,
 .title-text,
-.item-text {
+.item-text,
+.modal-policy {
   color: var(--secondary-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
