--- a/css/style.css
+++ b/css/style.css
@@ -383,7 +383,8 @@ p,
   transform: translate(0);
   cursor: pointer;
   border-color: rgba(0, 0, 0, 0.1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close:hover .modal-close,
