--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ p,
   position: absolute;
   top: 50%;
   left: 50%;
-
+  padding: 40px;
   min-height: 581px;
   min-width: 528px;
 
@@ -295,16 +295,15 @@ p,
   font-weight: bold;
   font-size: 20px;
   line-height: 23px;
-  margin-top: 40px;
   text-align: center;
   letter-spacing: 0.03em;
+  margin-bottom: 30px;
 }
 .modal-form {
   width: 448px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  padding: 40px 0;
 }
 .modal-wrapper:nth-child(-n + 3) {
   margin-bottom: 30px;
@@ -322,6 +321,7 @@ p,
 .modal-input[placeholder='Введите текст'] {
   position: relative;
   min-height: 120px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input::placeholder {
@@ -355,8 +355,13 @@ p,
   fill: var(--accent-color);
 }
 
-.modal-label > .modal-input:focus + .modal-item {
+.modal-label > .modal-input:focus + .modal-item,
+.modal-label > .modal-input:hover + .modal-item {
   fill: var(--accent-color);
+}
+
+.modal-label {
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-text {
@@ -403,11 +408,6 @@ p,
   position: relative;
 }
 
-.checkbox-label {
-  display: flex;
-  justify-content: flex-end;
-}
-
 .checkbox-label::after {
   position: absolute;
   content: '';
@@ -423,7 +423,7 @@ p,
 
 .modal-checkbox:checked ~ .checkbox-label::after {
   border: 1px solid var(--accent-color);
-  background-image: url(/images/icon-check.svg);
+  background-image: url(./images/icon-check.svg);
   background-size: contain;
   background-color: var(--accent-color);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -434,11 +434,21 @@ p,
   width: 200px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 30px;
+
   cursor: pointer;
   box-shadow: 0px 3px 1px rgb(0 0 0 / 10%), 0px 1px 2px rgb(0 0 0 / 8%),
     0px 2px 2px rgb(0 0 0 / 12%);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-wrapper.footer {
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.private-policy {
+  color: var(--accent-color);
 }
 
 .close {
@@ -462,6 +472,8 @@ p,
 
 .item-container {
   border: 1px solid #eeeeee;
+  border-top: 0;
+  padding: 20px 24px 4px 24px;
 }
 
 /* сетка портфолио */
@@ -497,6 +509,7 @@ p,
   line-height: var(--text-line-height);
   letter-spacing: 0.03em;
 }
+
 .titles > .item,
 .img-title {
   font-size: 16px;
@@ -648,7 +661,7 @@ p,
   height: 4px;
   background-color: var(--accent-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   border-radius: 4px;
 }
@@ -805,9 +818,7 @@ p,
 
 .footer-wrapper {
   margin-left: 70px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  margin-top: 10px;
 }
 
 .join,
@@ -817,11 +828,13 @@ p,
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-bottom: 20px;
   color: #ffffff;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link.footer {
+  padding: 0;
   margin-bottom: 20px;
   color: var(--primary-backround-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -829,13 +842,12 @@ p,
 .item-text {
   font-size: 16px;
   line-height: 1.88;
-  padding: 4px 24px 20px 24px;
 }
 
 .item-title {
   font-size: 18px;
   line-height: 2;
-  padding: 20px 24px 4px 24px;
+  margin-bottom: 4px;
 }
 
 .item-footer > .link {
