--- a/css/style.css
+++ b/css/style.css
@@ -423,7 +423,7 @@ p,
 
 .modal-checkbox:checked ~ .checkbox-label::after {
   border: 1px solid var(--accent-color);
-  background-image: url(./images/icon-check.svg);
+  background-image: url(../images/check.svg);
   background-size: contain;
   background-color: var(--accent-color);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
