Правки финал ДЗ6

--- a/css/style.css
+++ b/css/style.css
@@ -436,9 +436,14 @@ p,
   margin-right: auto;
 
   cursor: pointer;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-wrapper + .button:hover,
+.modal-wrapper + .button:focus {
   box-shadow: 0px 3px 1px rgb(0 0 0 / 10%), 0px 1px 2px rgb(0 0 0 / 8%),
     0px 2px 2px rgb(0 0 0 / 12%);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-wrapper.footer {
