--- a/css/style.css
+++ b/css/style.css
@@ -942,11 +942,8 @@ img {
 }
 
 .subscribe {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
   margin-left: auto;
+  margin-top: 8px;
 }
 .footer-form {
   display: flex;
